--- a/Lee algorithm.vcxproj.filters
+++ b/Lee algorithm.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lee algorithm.cpp">
+    <ClCompile Include="lee.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="lee.cpp">
+    <ClCompile Include="Lee test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
