add settings for GenerateTask and GenerateObstacles + minor changes

--- a/Lee algorithm.vcxproj.filters
+++ b/Lee algorithm.vcxproj.filters
@@ -27,4 +27,8 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="results.txt" />
+    <Text Include="frequency.txt" />
+  </ItemGroup>
 </Project>
