--- a/Lee algorithm.vcxproj
+++ b/Lee algorithm.vcxproj
@@ -153,6 +153,10 @@
   <ItemGroup>
     <ClInclude Include="lee.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="frequency.txt" />
+    <Text Include="results.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
